<resources>
    <string name="app_name">Cryptos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email ID</string>
    <string name="name_hint">Name</string>
    <string name="email_password_error">Email ID or password is incorrect</string>
    <string name="new_user">Not yet an user?</string>
    <string name="already_user">Already registered?</string>
    <string name="confirm_password_hint">Confirm password</string>
</resources>