<?xml version="1.0" encoding="utf-8"?>

<!--
IDs used
1. Centre Line: "middleLine", type: RelativeLayout
2. Error: "error", type: TextView
3. Register Button: "registerButton", type: Button
4. Password : "password", type: AutoCompleteTextView
5. Email ID: "email", type: AutoCompleteTextView
6. Title: "title", type: ImageView
7. Login Button: "loginButton", type: Button
8. Loading Video: "loadingVideo", type: ImageView
9. Forgot password: "forgotPassword", type: TextView
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/middleLine"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/notYetUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:layout_above="@id/registerButton"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:textColor="?android:textColor"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/error_color_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/email_password_error"
        android:textColor="@color/error_color"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonbackground"
        android:elevation="25dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="?android:windowBackground"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="?android:textColorPrimary" />

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/middleLine"
        android:layout_margin="10dp"
        android:background="?android:windowBackground">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:visibility="visible"
            app:boxStrokeColor="?android:textColorPrimary"
            app:counterOverflowTextColor="?android:textColorPrimary"
            app:endIconMode="password_toggle"
            app:hintTextColor="?android:textColorPrimary">

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="LabelFor,RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/passwordLayout"
        android:layout_margin="10dp"
        android:background="?android:windowBackground">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?android:textColorPrimary"
            app:counterOverflowTextColor="?android:textColorPrimary"
            app:endIconMode="none"
            android:hint="@string/email_hint"
            app:hintTextColor="?android:textColorPrimary">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:inputType="textEmailAddress"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="LabelFor,RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="CryptoCurrency"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_above="@id/error"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:backgroundTint="@color/grey"
        android:textColor="?android:textColorPrimary"
        android:textAllCaps="false"
        android:layout_below="@id/middleLine"
        android:text="@string/login"
        android:textSize="20sp"
        android:elevation="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/buttonbackground" />

    <ProgressBar
        android:id="@+id/loadingVideo"
        android:layout_below="@id/passwordLayout"
        android:padding="15dp"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription"
        android:visibility="gone"/>

</RelativeLayout>