<?xml version="1.0" encoding="utf-8"?>

<!--
IDs used
1. Centre line: "middleLine", type: RelativeLayout
2. Login button: "loginButton", type: Button
3. Password: "password", type: AutoCompleteTextView
4. Email: "email", type: AutoCompleteTextView
5. Name: "name", type: AutoCompleteTextView
6. Username: "username", type: AutoCompleteTextView
7. Confirm password: "confirmPassword", type: AutoCompleteTextView
8. Title: "title", type: ImageView
9. Register Button: "registerButton", type: Button
10. Loading Video: "loadingVideo", type: ImageView
11. Already registered: "alreadyRegistered", type: TextView
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/middleLine"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/alreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_user"
        android:layout_above="@id/loginButton"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:textColor="?android:textColor"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="?android:textColorPrimary"
        android:textColor="?android:windowBackground"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:text="@string/login"
        android:textSize="20sp"
        android:elevation="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/buttonbackground"/>

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/middleLine"
        android:layout_margin="10dp"
        android:background="?android:windowBackground">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?android:textColorPrimary"
            app:counterOverflowTextColor="?android:textColorPrimary"
            app:endIconMode="none"
            android:hint="@string/password_hint"
            app:hintTextColor="?android:textColorPrimary">

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="LabelFor,RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/passwordLayout"
        android:layout_margin="10dp"
        android:background="?android:windowBackground">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?android:textColorPrimary"
            app:counterOverflowTextColor="?android:textColorPrimary"
            app:endIconMode="none"
            android:hint="@string/email_hint"
            app:hintTextColor="?android:textColorPrimary">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:inputType="textEmailAddress"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="LabelFor,RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailLayout"
        android:layout_margin="10dp"
        android:background="?android:windowBackground">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?android:textColorPrimary"
            app:counterOverflowTextColor="?android:textColorPrimary"
            app:endIconMode="none"
            android:hint="@string/name_hint"
            app:hintTextColor="?android:textColorPrimary">

            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:inputType="textPersonName"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="LabelFor,RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout"
        android:layout_margin="10dp"
        android:background="?android:windowBackground">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="?android:textColorPrimary"
            app:counterOverflowTextColor="?android:textColorPrimary"
            app:endIconMode="password_toggle"
            android:hint="@string/confirm_password_hint"
            app:hintTextColor="?android:textColorPrimary">

            <AutoCompleteTextView
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="LabelFor,RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/nameLayout"
        android:gravity="center"
        android:text="CryptoCurrency"
        android:textColor="?android:textColorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:backgroundTint="@color/grey"
        android:textColor="?android:textColorPrimary"
        android:textAllCaps="false"
        android:layout_below="@id/confirmPasswordLayout"
        android:text="@string/register"
        android:textSize="20sp"
        android:elevation="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/buttonbackground" />

    <ProgressBar
        android:id="@+id/loadingVideo"
        android:layout_below="@id/confirmPasswordLayout"
        android:padding="15dp"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

</RelativeLayout>